--- a/cv.qmd
+++ b/cv.qmd
@@ -78,9 +78,9 @@ R · SQL · Tableau · MATLAB · JavaScript · HTML/CSS · $\LaTeX$
 
 (9) **Mimmack, K.**, Qiao, K., Gagliardi, G., Bueichekú, E., Cacciamani, F., Wang, S., Odeogu, O., Marshall, G., Sepulcre, J., Diez, I. & Vannini, P. (2023, July). Cerebral Systems Underlying Anosognosia for Memory Loss in Aging and Alzheimer’s Disease. Poster presented at: The Alzheimer’s Association International Conference, Amsterdam, Netherlands
 
-(10) **Mimmack, K.**, Sprague, E., Amariglio, R., Vannini, P., Marshall, G. (2022, December). Longitudinal Evolution of Financial Capacity and Cerebral Tau and Amyloid Burden in Cognitively Normal Older Adults, Mild Cognitive Impairment, and Alzheimer’s Disease Dementia. Poster presented at: Clinical Trials on Alzheimer’s Disease Conference, San Francisco, CA. Finalized results in \[4\].
+(10) **Mimmack, K.**, Sprague, E., Amariglio, R., Vannini, P., Marshall, G. (2022, December). Longitudinal Evolution of Financial Capacity and Cerebral Tau and Amyloid Burden in Cognitively Normal Older Adults, Mild Cognitive Impairment, and Alzheimer’s Disease Dementia. Poster presented at: Clinical Trials on Alzheimer’s Disease Conference, San Francisco, CA. Final results published in \[4\].
 
-(11) **Mimmack, K.**, Gagliardi, G., Marshall, G., Vannini, P. (2022, August). A Novel Approach to Measure Awareness of Memory Decline and its Ability to Predict Clinical Progression in Cognitively Normal Older Adults. Poster presented at: The Alzheimer’s Association International Conference, San Diego, CA (Virtual). Finalized results in \[7\].
+(11) **Mimmack, K.**, Gagliardi, G., Marshall, G., Vannini, P. (2022, August). A Novel Approach to Measure Awareness of Memory Decline and its Ability to Predict Clinical Progression in Cognitively Normal Older Adults. Poster presented at: The Alzheimer’s Association International Conference, San Diego, CA. Final results published in \[7\].
 
 (12) **Mimmack, K.**, Towfiq, K., Bueno, M. (2017, August). Catastrophic Condition Number of Pencils Close to Whirlpool Pencils in DL(P). Poster presented at: UCSB Summer Undergraduate & Graduate Research Colloquium, Santa Barbara, CA
 
